[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/containers/Placeholder_640-480_uno.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/GaramondPremrPro-Smbd.otf" type="DynamicFontData" id=2]
[ext_resource path="res://ui/Buttons/Config.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/reusableWindows/PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://ui/Buttons/Salir.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/icons/icons/Equis y palomitas/equis irregular blanco.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/icons/Equis y palomitas/equis reuglar blanca.png" type="Texture" id=7]
[ext_resource path="res://assets/containers/Placeholder_16-9_cuatro.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/advanced_pixel-7.ttf" type="DynamicFontData" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 640, 480 )

[sub_resource type="DynamicFont" id=2]
size = 62
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 1600, 900 )

[sub_resource type="DynamicFont" id=5]
size = 48
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 35
outline_color = Color( 0.478431, 1, 0, 1 )
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=7]
size = 28
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=9]
resource_name = "fadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "outIn"
tracks/0/type = "value"
tracks/0/path = NodePath("Salir:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2610, 390 ), Vector2( 690, 390 ) ]
}

[node name="PauseMenu" type="Control" groups=[
"UI_R",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1920.0
margin_right = 1920.0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -480.0
margin_top = -270.0
margin_right = 480.0
margin_bottom = 270.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Panel"]
margin_left = -45.0
margin_top = -61.0
margin_right = 60.0
margin_bottom = 57.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="FPS" type="TextureButton" parent="Panel"]
margin_left = 35.0
margin_top = 152.0
margin_right = 260.0
margin_bottom = 490.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="fps_timer" type="Timer" parent="Panel/FPS"]
wait_time = 3.0

[node name="Head" type="Label" parent="Panel"]
anchor_left = 0.488
anchor_top = 0.146
anchor_right = 0.488
anchor_bottom = 0.146
margin_left = -213.372
margin_top = -31.4239
margin_right = 212.628
margin_bottom = 31.5761
custom_fonts/font = SubResource( 2 )
text = "Menú de pausa"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Columns" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -213.0
margin_top = -116.5
margin_right = 213.0
margin_bottom = 116.5
custom_constants/separation = 20
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Columns"]
margin_right = 426.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 2 )
text = "Elige una opción:"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Row" type="HBoxContainer" parent="Panel/Columns"]
margin_top = 83.0
margin_right = 426.0
margin_bottom = 233.0
custom_constants/separation = 80
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Salir" parent="Panel/Columns/Row" instance=ExtResource( 5 )]
margin_left = 23.0
margin_right = 173.0
margin_bottom = 150.0

[node name="Config" parent="Panel/Columns/Row" instance=ExtResource( 3 )]
margin_left = 253.0
margin_right = 403.0
margin_bottom = 150.0

[node name="Salir" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 1650.0
margin_top = -150.0
margin_right = 2190.0
margin_bottom = 150.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="back" type="TextureButton" parent="Salir"]
margin_left = -690.0
margin_top = -390.0
margin_right = 1230.0
margin_bottom = 690.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Columns" type="VBoxContainer" parent="Salir"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -232.0
margin_top = -103.0
margin_right = 232.0
margin_bottom = 103.0
custom_constants/separation = 15
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Salir/Columns"]
margin_right = 464.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "Elige una opción:"
align = 1
valign = 1

[node name="MainMenu" type="Button" parent="Salir/Columns"]
margin_top = 64.0
margin_right = 464.0
margin_bottom = 106.0
custom_fonts/font = SubResource( 6 )
text = "Salir al menú del juego"

[node name="Out" type="Button" parent="Salir/Columns"]
margin_top = 121.0
margin_right = 464.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 6 )
text = "Cerrar el juego"

[node name="Label2" type="Label" parent="Salir/Columns"]
margin_top = 178.0
margin_right = 464.0
margin_bottom = 206.0
custom_fonts/font = SubResource( 7 )
text = "Ambas opciones guardarán automáticamente tu progreso"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fadeOut = SubResource( 9 )
anims/in = SubResource( 3 )
anims/outIn = SubResource( 8 )
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Panel/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Panel/FPS" to="." method="_on_FPS_pressed"]
[connection signal="timeout" from="Panel/FPS/fps_timer" to="." method="_on_fps_timer_timeout"]
[connection signal="pressed" from="Panel/Columns/Row/Salir" to="." method="_on_Salir_pressed"]
[connection signal="pressed" from="Salir/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Salir/Columns/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="Salir/Columns/Out" to="." method="_on_Out_pressed"]
